--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,20 +1,8 @@
 // https://catppuccin.com/
 $background: #f7f6f2; // pantone 11-4101 TPG (stalactite)
-$background-alt: #e6e9ef;
-$background-light: #e6e9ef;
-$rosewater: #dc8a78;
-$yellow: #df8e1d;
-$orange: #fe640b;
-$blue: #1e66f5;
-$green: #40a02b;
-$red: #d20f39;
-$maroon: #e64553;
-$purple: #8839ef;
-$lavender: #7287fd;
-$teal: #179299;
-$pink: #ea76cb;
-$text: #4c4f69;
-$text-light: #6c6f89;
-$text-highlight: #eff1f5;
-$gray: #ccd0da;
-$blue-filter: invert(49%) sepia(38%) saturate(4860%) hue-rotate(208deg) brightness(105%) contrast(101%);
+$background-light: #f4eee8; // Pantone 11-0002 TCX (Snowfall)
+$text: #29282d; // pantone 19-4007 TCX (anthracite)
+$text-light: #505457; // Pantone 20-0012 TPM (metallic fir)
+$extra-light-green: #cdd4cb; // Pantone 12-5703 TPG (frosted mint)
+$light-green: #7e9b76; // Pantone 17-0215 TCX (Aspen Green)
+$dark-green: #297638; // Pantone 2465 C (Palm Tree Island)
