--- a/src/sass/searchSortFilter.scss
+++ b/src/sass/searchSortFilter.scss
@@ -17,12 +17,12 @@
 
   @include mixins.screen('desktop') {
     &:hover {
-      color: colors.$blue;
+      color: colors.$dark-green;
     }
   }
 
   &.category-selected {
     font-weight: bold;
-    color: colors.$blue;
+    color: colors.$dark-green;
   }
 }
