fix some more colors

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -13,8 +13,7 @@ const items = collection.map(item => ({ ...item.data, slug: '/blog/' + item.slug
 
 <Layout title="bencuan's blog" description="long-form writing projects" currPage="blog">
   <h1 class="blog-title">blog</h1>
-  <p class="splash"></p>
-  <div class="home-buttons">
+  <div class="blog-buttons">
     <Button href="/rss.xml"><Rss /> rss</Button>
     <Button href="https://bencuan.substack.com"><Newspaper /> newsletter</Button>
   </div>
