--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -15,6 +15,9 @@
     font-weight: 200;
     font-size: fonts.$s2;
     color: colors.$text;
+    font-family: fonts.$header;
+    margin-left: 0.5rem;
+    letter-spacing: 1px;
   }
 
   margin-bottom: 2rem;
