--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -3,6 +3,10 @@
 @use 'mixins';
 @use 'spacing';
 
+.blog-buttons {
+  padding-bottom: 0.5rem;
+}
+
 .blog-title {
   font-family: fonts.$header;
   font-weight: 500;
@@ -200,7 +204,7 @@
 
 .blog-caption {
   font-size: fonts.$s-1;
-  font-family: fonts.$header;
+  font-family: fonts.$body;
   text-align: center;
   color: colors.$text-light;
 }
