--- a/src/sass/button.scss
+++ b/src/sass/button.scss
@@ -39,62 +39,11 @@
   background-clip: padding-box, border-box;
 
   &:hover {
-    animation:
-      rotate 0.5s ease-out infinite,
-      grow 0.75s alternate ease-out infinite,
-      pinker 0.75s alternate ease-out infinite;
-    border: solid transparent 2px;
+    animation: grow 0.75s alternate ease-out infinite;
+    border: solid colors.$dark-green 2px;
   }
 
-  background-image: linear-gradient(
-      to right,
-      rgb(255 var(--g) 255 / var(--opacity)),
-      rgb(255 var(--g) 255 / var(--opacity))
-    ),
-    conic-gradient(
-      from var(--angle),
-      colors.$light-green 0deg 90deg,
-      colors.$dark-green 90deg 180deg,
-      colors.$extra-light-green 180deg 270deg,
-      colors.$dark-green 270deg 360deg
-    );
-
-  background-origin: border-box;
-}
-
-// hue rotation only
-.button-simple {
-  border: solid colors.$dark-green 3px;
-  border-radius: 10px;
-  padding: 2px 4px;
-  text-decoration: none;
-  position: relative;
-  box-sizing: border-box;
-  transition: all 0.25s linear;
-
-  z-index: 0;
-  overflow: hidden;
-
-  background-clip: padding-box, border-box;
-
-  &:hover {
-    animation: rotate 2s linear infinite;
-    border: solid transparent 5px;
-  }
-
-  background-image: linear-gradient(
-      to right,
-      rgb(255 var(--g) 255 / var(--opacity)),
-      rgb(255 var(--g) 255 / var(--opacity))
-    ),
-    conic-gradient(
-      from var(--angle),
-      colors.$extra-light-green 0deg 90deg,
-      colors.$dark-green 90deg 180deg,
-      colors.$extra-light-green 180deg 270deg,
-      colors.$light-green 270deg 360deg
-    );
-
+  background-color: colors.$background-light;
   background-origin: border-box;
 }
 
@@ -144,16 +93,6 @@
 
     100% {
       --angle: 360deg;
-    }
-  }
-
-  @keyframes pinker {
-    from {
-      --g: 255;
-    }
-
-    to {
-      --g: 190;
     }
   }
 }
