--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -10,11 +10,18 @@
 .blog-title {
   font-family: fonts.$header;
   font-weight: 500;
-  font-size: fonts.$s4;
+  font-size: fonts.$s8;
+  line-height: 1;
 }
 
 .blog-date {
-  margin-bottom: 0;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: 200;
+}
+
+.blog-description {
+  font-style: italic;
 }
 
 .blog-content {
