--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -12,8 +12,8 @@
   }
 
   h1 {
-    font-weight: 200;
-    font-size: fonts.$s2;
+    font-weight: 300;
+    font-size: fonts.$s6;
     color: colors.$text;
     font-family: fonts.$header;
     margin-left: 0.5rem;
@@ -21,4 +21,8 @@
   }
 
   margin-bottom: 2rem;
+}
+
+p {
+  font-size: fonts.$s1;
 }
