--- a/src/pages/[...root].astro
+++ b/src/pages/[...root].astro
@@ -2,9 +2,9 @@
 import { getCollection } from 'astro:content';
 import Layout from '../components/layout.astro';
 import { MDLink } from '../components/links.tsx';
+import { ColorDot } from '../components/colorDot.tsx';
 import '../sass/blog.scss';
 import '../sass/links.scss';
-import '../sass/root.scss';
 
 export const prerender = true;
 export async function getStaticPaths() {
@@ -21,5 +21,7 @@ const { Content } = await entry.render();
 
 <Layout title={entry.data.title} description={entry.data.description} currPage={entry.data.title}>
   <h1 class="blog-title">{entry.data.title}</h1>
-  <Content components={{ a: MDLink }} />
+  <div class="blog-content">
+    <Content components={{ a: MDLink, ColorDot }} />
+  </div>
 </Layout>
