fix some styles

--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -35,6 +35,6 @@ The Layout component serves as the base component in which all content should be
       <slot />
     </main>
 
-    <Footer client:idle />
+    <Footer currPage={currPage} client:idle />
   </div>
 </html>
