--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -4,12 +4,12 @@
 @use 'spacing';
 
 .blog-buttons {
-  padding-bottom: 0.5rem;
+  margin: spacing.$ss 0;
 }
 
 .blog-title {
   font-family: fonts.$header;
-  font-weight: 500;
+  font-weight: 300;
   font-size: fonts.$s8;
   line-height: 1;
   margin-bottom: 0.5rem;
@@ -18,11 +18,12 @@
 .blog-date {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-weight: 200;
+  font-weight: 300;
 }
 
 .blog-description {
   font-style: italic;
+  font-weight: 300;
 }
 
 .blog-content {
@@ -64,7 +65,7 @@
   p {
     font-family: fonts.$body;
     color: colors.$text-light;
-    font-weight: 400;
+    font-weight: 300;
   }
 
   li {
