--- a/src/sass/blog.scss
+++ b/src/sass/blog.scss
@@ -83,6 +83,11 @@
     font-weight: 500;
     color: colors.$text;
   }
+
+  em {
+    font-style: italic;
+    font-weight: 300;
+  }
 }
 
 .footnote-icon,
