--- a/src/components/layout.astro
+++ b/src/components/layout.astro
@@ -17,7 +17,7 @@ The Layout component serves as the base component in which all content should be
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
     <Seo title={title} description={description} image={image} />
     <link rel="icon" type="image/png" href="/favicon.png" />
-    <link rel="sitemap" href="/sitemap-index.xml" />
+    <link rel="sitemap" href="/sitemap-0.xml" />
     {headContent}
   </head>
   <div class="body container">
