--- a/src/pages/[...blog].astro
+++ b/src/pages/[...blog].astro
@@ -24,7 +24,7 @@ const imgLink = entry.data.image
 
 <Layout currPage={'blog'} title={entry.data.title} description={entry.data.description} image={imgLink}>
   <h1 class="blog-title">{entry.data.title}</h1>
-  <p class="blog-date">{ToDateString(entry.data.date, true)}</p>
+  <p class="blog-date" data-lastmod={entry.data.date.toISOString()}>{ToDateString(entry.data.date, true)}</p>
   <p class="blog-description">{entry.data.description}</p>
   <div class="blog-content">
     <Content components={{ ...components, a: MDLink }} />
