--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -230,6 +230,38 @@
   src: url('/fonts/Novela/novela-displayitalic-webfont.woff2') format('woff2');
 }
 
+@font-face {
+  font-family: Manrope;
+  font-style: normal;
+  font-weight: 200 800;
+  font-display: swap;
+  src: url('/fonts/Manrope/Manrope-VariableFont_wght.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: Manrope;
+  font-style: italic;
+  font-weight: 200 800;
+  font-display: swap;
+  src: url('/fonts/Manrope/Manrope-Italic-VariableFont_wght.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'Fira Code';
+  font-style: normal;
+  font-weight: 300 700;
+  font-display: swap;
+  src: url('/fonts/FiraCode/FiraCode-VariableFont_wght.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: FiraCode;
+  font-style: normal;
+  font-weight: 300 700;
+  font-display: swap;
+  src: url('/fonts/FiraCode/FiraCode-VariableFont_wght.ttf') format('truetype');
+}
+
 $header: Pangaia, serif;
 $body: Eiko, serif;
 $ui: Fraktion, sans-serif;
